# auth/validation.js
@@ -14,12 +14,8 @@ export default {
   },
   signIn: {
     body: {
-      email: Joi.string()
-        .email()
-        .required(),
-      password: Joi.string()
-        .regex(/[a-zA-Z0-9]{3,30}/)
-        .required(),
+      email: Joi.string().email(),
+      password: Joi.string().regex(/[a-zA-Z0-9]{3,30}/),
     },
   },
   forget: {
