# store/routes.js
@@ -15,6 +15,7 @@ import {
   serveOrder,
   checkOut,
   cancelOrder,
+  generateToken,
 } from './controller';
 
 const router = express.Router();
@@ -22,6 +23,12 @@ const router = express.Router();
 router.get('/generate/code', generateQRcode, (req, res) =>
   res.status(200).json({
     code: req.code,
+  }),
+);
+
+router.get('/generate/token/:ref', generateToken, (req, res) =>
+  res.status(200).json({
+    token: req.token,
   }),
 );
 
